<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Battleship</string>
    <string name="menu_settings">Settings</string>
    <string name="single_player_game">Single Player</string>
    <string name="multi_player_game">Multi Player</string>
    <string name="grid_size_row_title">Grid Size</string>
    <string name="aircraft_carrier_row_title">Aircraft Carriers</string>
    <string name="battleship_row_title">Battleships</string>
    <string name="submarine_row_title">Submarines</string>
    <string name="destroyer_row_title">Destroyers</string>
    <string name="patrol_boat_row_title">Patrol Boats</string>

</resources>